<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fishpool.stylecreator.LoginActivity">

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/prompt_email"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="121dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/prompt_password"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/etEmail"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/etEmail" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/prompt_confirm_password"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="1dp"
        app:layout_constraintRight_toRightOf="@+id/etPassword"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        android:layout_marginRight="1dp" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:text="@string/login"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/cbAutoLogin"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="202dp"
        app:layout_constraintLeft_toLeftOf="@+id/cbAutoLogin" />

    <CheckBox
        android:id="@+id/cbAutoLogin"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:checked="true"
        android:text="@string/auto_login"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/btLogin"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="63dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="63dp"
        android:layout_marginRight="63dp" />

</android.support.constraint.ConstraintLayout>
